--- a/README.rdoc
+++ b/README.rdoc
@@ -10,7 +10,8 @@ available_genres.each: http://stackoverflow.com/questions/12983815/how-do-i-use-
 
 Favorites button: I wanted the user to be able to search for shows and pick favorites without necessarily saving every search option in the database. So I used ActiveSupport to encode the object as a JSON string (text), then that text was submitted to the shows controller, and the shows controller converted the text from a string back into a show, to be saved in the database. 
 
-Configuration:
+Partials: _show.html.erb - explain this a little bit better
+
 
 Favorites buttons from search page: http://stackoverflow.com/questions/12360148/rails-link-to-or-button-to-post-request-with-parameters
 
